--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,41 @@ body, html {
 	margin: 0;
 }
 
+
+
 #map {
 	width: 100%;
 	height: 100%;
+	z-index:1;
 }
+
+#uiContainer {
+	position: absolute;
+	width: 190px;
+	height: 100px;
+	padding: 10px;
+	background-color: rgba(255,255,255,1);
+	right: 10px;
+	top: 10px;
+	z-index: 2;
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 3px;
+	border-color: rgb(200,200,200);
+	box-shadow: 3px 3px 5px rgba(100,100,100,0.5);
+}
+
+label {
+	display: block;
+	font-family: Verdana, Geneva, sans-serif;
+	font-size: 14px;
+	margin-bottom: 5px;
+	margin-left: 3px;
+}
+
+select {
+	display: block;
+	width: 100%;
+	/*display: inline-block;*/
+}
+
