--- a/style/style.css
+++ b/style/style.css
@@ -14,31 +14,6 @@ body, html {
 	z-index:1;
 }
 
-#info {
-	background-color: rgb(255,255,255);
-	background-color: rgba(255,255,255,0.85);
-	z-index: 2;
-	border-style: solid;
-	border-width: 1px;
-	border-radius: 3px;
-	border-color: rgb(200,200,200);
-	box-shadow: 3px 3px 5px rgb(100,100,100);
-	box-shadow: 3px 3px 5px rgba(100,100,100,0.5);
-	
-	width: 20px; 
-	height:33px;
-	position: absolute;
-	top: 10px;
-	right: 204px;
-	
-}
-
-#infoIcon {
-	display: block;
-	margin: auto;
-	fill: rgb(150,150,150);
-}
-
 .uiBox {
 	background-color: rgb(255,255,255);
 	background-color: rgba(255,255,255,0.85);
@@ -65,11 +40,15 @@ body, html {
 	margin-bottom: 10px;
 }
 
-#legendContainer {
-	position: fixed;
+#legendAndInfoButtonContainer {
+	position: absolute;
 	left: 10px;
 	bottom: 10px;
 	z-index: 2;
+}
+
+#legendContainer {
+	display: inline-block;
 }
 
 #legendItemContainer {
@@ -79,6 +58,31 @@ body, html {
 .legendTitle {
 	margin: 5px;
 }
+
+#info {
+	background-color: rgb(255,255,255);
+	background-color: rgba(255,255,255,0.85);
+	z-index: 2;
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 3px;
+	border-color: rgb(200,200,200);
+	box-shadow: 3px 3px 5px rgb(100,100,100);
+	box-shadow: 3px 3px 5px rgba(100,100,100,0.5);
+	padding: 0px;
+	width: 20px; 
+	height: 33px;
+	display: inline-block;
+	position: relative;
+	bottom: -17px;
+}
+
+#infoIcon {
+	display: block;
+	margin: auto;
+	fill: rgb(150,150,150);
+}
+
 
 label {
 	display: block;
