--- a/style/style.css
+++ b/style/style.css
@@ -30,7 +30,7 @@ body, html {
 
 #dataSelectUIContainer {
 	position: absolute;
-	width: 190px;
+	width: 210px;
 	height: auto;
 	right: 10px;
 	top: 10px;
@@ -77,10 +77,20 @@ body, html {
 	bottom: -16px;
 }
 
+#steplist {
+	display: none;
+}
+
 #infoIcon {
 	display: block;
 	margin: auto;
 	fill: rgb(150,150,150);
+}
+
+.scenarioButton {
+	margin: 5px 0px 0px 0px;
+	width: 100%;
+	height: 50px;
 }
 
 
@@ -97,6 +107,8 @@ select {
 	width: 100%;
 	/*display: inline-block;*/
 }
+
+
 
 .selectpicker {
 	width: 50px;
