--- a/style/style.css
+++ b/style/style.css
@@ -160,10 +160,12 @@ select {
 	position: relative;
 }
 
-.modal img {
+#storyWindow img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 20px;
+	width: 100%;
 }
 
 .selectpicker {
@@ -190,9 +192,10 @@ select {
 }
 
 .resizableContent {
-    height: calc(100% - 30px);
+    /*height: calc(100% - 30px);*/
+    height: 100%;
     width: 100%;
-    padding: 0.7em;
+    padding: 11px;
     overflow: auto; 
 }
 
@@ -203,11 +206,12 @@ select {
 
 #storyTitleBar {
 	text-align: center;
-	height: 30px;
+	/*height: 30px;*/
 }
 
 #storyTitleText{
-	position: absolute;
+	height: auto;
+	/*position: absolute;*/
 	top: 3px;
 	left: 0px;
 	right: 0px;
@@ -225,7 +229,9 @@ select {
 	right: 5px;
 }
 
-
+.storyContent li {
+	margin-bottom: 10px;
+}
 
 
 
