--- a/style/style.css
+++ b/style/style.css
@@ -292,25 +292,27 @@ select {
 	fill: rgb(150,150,150);
 }
 
+.leaflet-marker-pane {
+	pointer-events: none;
+}
+
 /*******************************************************/
 /*                   Chart Window                      */
 /*******************************************************/
 
 #chartWindow {
 	width: 300px;
-    height: 300px;
+    height: 200px;
     position: absolute;
 	top: 10px;
 	right: 230px;
 	z-index: 2;
+	overflow: hidden;
 }
 
 #chartWindowContent {
+	overflow: hidden;
 	/*background-color: red;*/
-}
-
-#SWEchart {
-
 }
 
 .axis path,
@@ -326,7 +328,7 @@ select {
 
 .line {
   fill: none;
-  stroke: #ef0d0c;
+  stroke: cadetblue;
   stroke-width: 1.5px;
 }
 
