--- a/style/style.css
+++ b/style/style.css
@@ -269,17 +269,16 @@ select {
 
 #info {
 	background-color: rgb(255,255,255);
-	background-color: rgba(255,255,255,0.85);
 	z-index: 2;
 	border-style: solid;
 	border-width: 1px;
-	border-radius: 3px;
-	border-color: rgb(200,200,200);
-	box-shadow: 3px 3px 5px rgb(100,100,100);
-	box-shadow: 3px 3px 5px rgba(100,100,100,0.5);
+	border-radius: 4px;
+	border-color: rgb(190,190,190);
+	box-shadow: 0px 1px 1px rgb(100,100,100);
+	box-shadow: 0px 1px 1px rgba(0,0,0,0.65);
 	padding: 0px;
-	width: 20px; 
-	height: 33px;
+	width: 27px; 
+	height: 27px;
 	display: inline-block;
 	position: absolute;
 	top: 9px;
@@ -291,8 +290,16 @@ select {
 }
 
 #showGraphButton {
+	background-color: rgb(255,255,255);
+	z-index: 2;
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 4px;
+	border-color: rgb(190,190,190);
+	box-shadow: 0px 1px 1px rgb(100,100,100);
+	box-shadow: 0px 1px 1px rgba(0,0,0,0.65);
 	padding: 5px;
-	height: 30px;
+	height: 27px;
 	width: 27px;
 	top: 10px;
 	right: 230px;
@@ -307,7 +314,7 @@ select {
 #infoIcon {
 	display: block;
 	margin: auto;
-	fill: rgb(150,150,150);
+	fill: rgb(100,100,100);
 }
 
 .leaflet-marker-pane {
