--- a/style/style.css
+++ b/style/style.css
@@ -267,6 +267,10 @@ select {
 	margin-bottom: 10px;
 }
 
+.storyTitle {
+	font-size: 18px;
+}
+
 #info {
 	background-color: rgb(255,255,255);
 	z-index: 2;
