--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@ body, html {
 	height: 100%;
 	width: 100%;
 	margin: 0;
-	/*overflow:hidden;*/ /* Need to make sidebar scrollable */ 
+	overflow:hidden; /* Need to make sidebar scrollable */ 
 }
 
 /*******************************************************/
@@ -41,16 +41,13 @@ body, html {
   color: yellow;
 }
 
-
-
-
-
 #dataSelectUIContainer {
 	position: absolute;
 	width: 210px;
 	height: auto;
 	right: 10px;
 	top: 10px;
+	overflow: auto;
 }
 
 .selectorContainer {
@@ -111,7 +108,7 @@ body, html {
 
 .scenarioButton {
 	margin: 5px 0px 0px 0px;
-	width: 89%;
+	width: 165px;
 	height: auto;
 	/*display: inline-block;*/
 }
@@ -132,14 +129,15 @@ body, html {
     background: transparent;
     margin-left: -3px;
     font-size: 16px;
+    float: right;
 }
 
 .headerExplainerButton {
-	top: 2px;
+	top: 1px;
 }
 
 .scenarioExplainerButton {
-    top: 7px;
+    top: 13px;
 }
 
 .explainerButton:hover {
