--- a/style/style.css
+++ b/style/style.css
@@ -291,7 +291,7 @@ select {
 	background-color: rgb(235,235,235);
 }
 
-#showGraphButton {
+#showChartButton {
 	background-color: rgb(255,255,255);
 	z-index: 2;
 	border-style: solid;
@@ -309,7 +309,7 @@ select {
 	z-index: 10;
 }
 
-#showGraphButton:hover {
+#showChartButton:hover {
 	background-color: rgb(235,235,235);
 }
 
